# strawgo-ai

./: .env.example  .gitignore  .version-info.md  AGGREGATOR_IMPLEMENTATION_PLAN.md  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  go.mod  go.sum
bench/: CGO_EMBED_REPORT.md  INDUSTRY_OPTIONS_2026.md  PHASE2_REPORT.md  PIPELINE_EMBED_REPORT.md  PIPELINE_HEAD_TO_HEAD.md  PIPELINE_PIPECAT_REPORT.md  QUALITY_REPORT.md  REPORT.md  RUST_TIER1_REPORT.md  compare_vad.py  gen_burst_pcm.go  quality_results_30pair_10db.csv  quality_results_30pair_5db.csv  quality_test.py  run_int8_ab.sh  run_phase2_sweep.sh  run_pipeline_sweep.sh  run_vad_sweep.sh
docs/: AGGREGATORS.md  AUDIO_STRATEGY.md  BUILD_STATUS.md  CONTRIBUTING.md  ELEVENLABS_TTS_UPGRADE.md  INTERRUPTIONS.md  ISSUES.md  SHUTDOWN_FIX.md  audio-codecs.md  logging.md
examples/: advanced_flow.go  aggregators_with_interruptions.go  audio_interruption_example.go  debug_logging.go  interruption_strategies.go  text_flow.go  voice_call_asterisk.go  voice_call_complete.go  voice_call_mulaw.go  voice_call_with_vad.go
onnx-worker/: Cargo.toml  Cross.toml  ORT_API_NOTES.md
onnx-worker/benches/: audio.rs
onnx-worker/src/: features.rs  lib.rs  main.rs  protocol.rs  resample.rs  server.rs  smart_turn.rs  vad.rs
scripts/: build_loadtest_embed_linux.sh  build_loadtest_pipeline_linux.sh  fetch-pipeline-models.sh  install_loadtest_embed_on_vm.sh  install_onnxruntime.sh
src/: benchmark_test.go
testdata/: burst_call_10s_16k.pcm  sine_440_100ms_16k.pcm  sine_440_500ms_16k.pcm  vad_silence_100ms.f32  (+2 more)
(+190 files in other folders)
